- Task Completed : fix issue with RNN notebook
- Next Task :

--- a/rnn_from_scatch.ipynb
+++ b/rnn_from_scatch.ipynb
@@ -4,305 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, am trying to develop a Recurent Neural Network from scratch,\n",
-    "\n",
-    "This may sound weird and challenging , am doing it for learning purpose, I want to understand those architecture how they works and how we can use them especially for neural machine translation."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Theory : \n",
-    "#### what is a Recurent neural network\n",
-    "\n",
-    "Recurent neural network or RNN was created to make use of sequentials information.\n",
-    "So what are sequentials information, sequentials information are information that comes into a sequence, where the curent sequence depend on the previous sequence.\n",
-    "\n",
-    "Another way of thinking about recurent neural network it's that they saved in memory what have been calculated so far.\n",
-    "\n",
-    "They looks like this in the real world \n",
-    "\n",
-    "![RNN](./pictures/rnn.jpg)*RNN Achitecture [Source](http://www.wildml.com/2015/09/recurrent-neural-networks-tutorial-part-1-introduction-to-rnns/)*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- $x_t$:  is the input of at time t, it can be a word in a sentence which is modeled as a one hot encoded vector.\n",
-    "- $s_t$ : is the hidden state of the network which is calculated from the previous hidden input and the input at current step $s_t = f(Ux_t+Ws_{t-1}))$\n",
-    "$f$ is usually a non linear function such as Relu or a tanh\n",
-    "- $o_t$ : is the output at time t , for word prediction $o_t$ is an array of all probabilities of word in our corpus.\n",
-    "$o_t=softmax(Vs_t)$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Some particularities of the network:\n",
-    "    \n",
-    "    the parameter W, U, V are shared accross all the network in oposition to the feed forward network\n",
-    " We do not need always the output at each time , some times we cares only about the final output."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "what a neural network can do:\n",
-    "    - with this we can predict time series data such as stock exchange prices\n",
-    "    - Do Neural Machine Translation, what I care about right now\n",
-    "    - Images tagging \n",
-    "    - Speech recogniton, it may be useful to check this for local languages"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Implementation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let see how to implement this stuff now..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " the now see what are the major component of the arctecturere"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "what do we do to go from an imput $x_t $ to an output $o_t$?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- we calculate $s_t$, given $s_{t-1}$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Utilites functions are :"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sigmoid(x):\n",
-    "    output = 1/(1+np.exp(-x))\n",
-    "    return output\n",
-    "def sigmoid_output_to_derivative(output):\n",
-    "    return output*(1-output)\n",
-    "def softmax(x):\n",
-    "    return np.exp(x) / np.exp(x).sum(axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import namedtuple\n",
-    "def get_params(vocab_size, num_hiddens):\n",
-    "    \"\"\"\n",
-    "    function help us to return  initialize the neural networks parameters \n",
-    "    for text prediction the the number of input and the number of output is equals to the vocabulary size, as well\n",
-    "    \"\"\"\n",
-    "    num_inputs = num_outputs = vocab_size\n",
-    "\n",
-    "    def normal(shape):\n",
-    "        return np.random.normal(scale=0.01, size=shape)\n",
-    "    # Hidden layer parameters\n",
-    "    U = normal((num_inputs, num_hiddens))\n",
-    "    W = normal((num_hiddens, num_hiddens))\n",
-    "    # Output layer parameters\n",
-    "    H = normal((num_hiddens, num_outputs))\n",
-    "    # Attach gradients\n",
-    "    Params = namedtuple('Params', [\"U\", \"V\", \"W\"])\n",
-    "    params = Params(U=U, V=V, W=W)\n",
-    "    return params"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_the_hidden_fuction(U, xt, W, s_prev):\n",
-    "    \"\"\"\n",
-    "    this function calculate the value at st \n",
-    "    Args:\n",
-    "         U is a matrix\n",
-    "         W is a matrix\n",
-    "         xt is the input at time t\n",
-    "         s_prev the value calculate in the previous layer\n",
-    "    \"\"\"\n",
-    "    return np.tanh(np.dot(U, xt)+np.dot(W, s_prev))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_ouput_ot(V, st):\n",
-    "    \"\"\"\n",
-    "    this compute the output at time \n",
-    "    Args:\n",
-    "        V : it's hyper parameter V which is a matrix\n",
-    "        st: the result from the hidden function\n",
-    "    \"\"\"\n",
-    "    return softmax(np.dot(V, st))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "the 2  functions by themselves will helps us to do the forward pass to the network, we just have to repeat the process n times where n is the number of hiddens units we have in our network"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let define a forward pass function:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def forward_pass(x, so, output_shape, vocab_size):\n",
-    "    \"\"\"\n",
-    "    this function will perform a forward pass into our network \n",
-    "    args :\n",
-    "        x : the input matrix we are using with it shape\n",
-    "        so: the intiale state or values of hidden layer :\n",
-    "        we fill them with zeroat tht begining\n",
-    "        output_shape : how we want our output to look like\n",
-    "    \"\"\"\n",
-    "    n = x.shape[0] # number of element in the x  we are predicting the next sentence number of hiddens is n\n",
-    "    previous_s = [so]\n",
-    "    outputs = []\n",
-    "    params = get_params(vocab_size, num_hiddens=n)\n",
-    "    for i in range(1, n+1):\n",
-    "        st = compute_the_hidden_fuction(params.U, x[i-1], params.W, previous_s[i-1])\n",
-    "        previous_s.append(st)\n",
-    "        output_t = compute_ouput_ot(params.V, st)\n",
-    "        outputs.append(output_t)\n",
-    "        \n",
-    "    return previous_s, outputs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "getting the data to use fr the training :"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2020-02-10 19:21:42--  https://raw.githubusercontent.com/prateekkarkare/rnn_char_modelling/master/dinos.txt\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.172.133\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.172.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 19909 (19K) [text/plain]\n",
-      "Saving to: ‘dinos.txt.1’\n",
-      "\n",
-      "dinos.txt.1         100%[===================>]  19.44K  --.-KB/s    in 0.09s   \n",
-      "\n",
-      "2020-02-10 19:21:43 (225 KB/s) - ‘dinos.txt.1’ saved [19909/19909]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "!wget https://raw.githubusercontent.com/prateekkarkare/rnn_char_modelling/master/dinos.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"dinos.txt\") as file:\n",
-    "    names = file.readlines()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "names = [name.strip() for name in names]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let us fin the data "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'np'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-3e23b0eb1389>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0md2l\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mload_data_time_machine\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_steps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m35\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtrain_iter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvocab\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0md2l\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_data_time_machine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_steps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.pyenv/versions/3.6.5/lib/python3.6/site-packages/d2l/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0md2l\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0m__version__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'0.11.3'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.pyenv/versions/3.6.5/lib/python3.6/site-packages/d2l/d2l.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmatplotlib\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mmxnet\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mautograd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcontext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgluon\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minit\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnpx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmxnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgluon\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrnn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'np'"
-     ]
-    }
-   ],
-   "source": [
-    "from d2l import load_data_time_machine\n",
-    "batch_size, num_steps = 32, 35\n",
-    "train_iter, vocab = d2l.load_data_time_machine(batch_size, num_steps)"
+    "This notebook is used for RNN work from Fast AI course"
    ]
   },
   {
@@ -310,9 +12,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from mxnet import n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
