- Task Completed : add fail to understand input and output and how they work
- Next Task :

--- a/text_processing.ipynb
+++ b/text_processing.ipynb
@@ -616,7 +616,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "II. Training the model"
+    "#### II. Building the model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the following part we will try to implement the network from scratch ans see how it goes."
    ]
   },
   {
